# popit_relationship

./: .env.example  .gitignore  README.md  docker-compose.yml  popit_to_neo4j.py  popit_to_networkx.py  pyproject.toml  requirements.txt  tests_popit_relationship.py
src/: main.py
src/popit_relationship/: common.py  db.py  main.py  primport.py  pyimport.py  sync.py
src/popit_relationship/schema/: base.py  sinar.py
tests/: test_primport.py  test_pyimport.py  test_sync.py
