[tool.poetry]
name = "popit_relationship"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
prospector = "^1.3.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
